--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,32 @@
 #appi{
     background-image: url('../img/atras.jpg');
 }
+.panel panel-primary{
+    position: absolute;
+}
+.corredero{
+    position: relative;
+    Width: 630px;
+    left: 7%;
+    font-size: 14px;
+    line-height: 1.6;
+    color: #555;
+    display: block;
+    padding: 6px 12px;
+    background-color: #fff;
+    border: 1px solid #ccd0d2;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.corredero2{
+    position: relative;
+    left: 45%;
+    font-size: 14px;
+
+
+}
 
 .label, sub, sup {
     vertical-align: baseline
@@ -2883,6 +2909,7 @@ output {
 .form-control::-moz-placeholder {
     color: #b1b7ba;
     opacity: 1
+
 }
 
 .form-control:-ms-input-placeholder {
